# cmakeprojectmanager2

./: .gitignore  CMakeLists.txt  CMakeProjectManager2.json.in  CMakeProjectManager2.pluginspec.in  README.md  appy-patch.sh  builddirmanager.cpp  builddirmanager.h  builddirreader.cpp  builddirreader.h  cmListFileLexer.c  cmakebuildconfiguration.cpp  cmakebuildconfiguration.h  cmakebuildinfo.h  cmakebuildsettingswidget.cpp  cmakebuildsettingswidget.h  cmakebuildstep.cpp  cmakebuildsystem.cpp  cmakebuildsystem.h  cmakecommands.cpp  cmakecommands.h  cmakeconfigitem.h  cmakeinlineeditordialog.cpp  cmakeinlineeditordialog.h  cmakekitinformation.cpp  cmakelistsnode.cpp  cmakelistsnode.h  cmakelistsparser.cpp  cmakelistsparser.h  cmakeopenprojectwizard.cpp  cmakeopenprojectwizard.h  cmakeparamsext.cpp  cmakeparamsext.h  cmakeprocess.cpp  cmakeproject.cpp  cmakeproject.h  cmakeproject.qrc  cmakeprojectconstants.h  cmakeprojectimporter.cpp  cmakeprojectmanager.cpp  (+39 more)
wizard/cmake2/: CMakeLists.txt  CMakeLists_qt4.txt  CMakeLists_qt5.txt  wizard.json
wizard/cmake2/cmake/modules/: FindCxx11.cmake  FindCxx14.cmake
